--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@ s<html>
 		    <li>Prijan Lovro</li>
 
 		</ul>
-	<img src="Tatooine.jpeg"
+	<img src="Slika1.jpg" width=1000 Height=45% 
 	</body>
 </html>
