--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ s<html>
 		    <li>Prijan Lovro</li>
 
 		</ul>
-	<img src="Slika1.jpg" width=150 Height=45%>
+	<img src="https://static.wikia.nocookie.net/starwars/images/9/96/Uprising_on_Endor.png/revision/latest?cb=20200315163407" width=150 Height=45%>
 	<img src="Slika2.jpg" width=100 Height=56%>
 	<img src="Slika3.jpg" width=200 Height=40%>
 	<img src="Slika4.jpg" width=300 Height=36%>
